[package]
name = "tauri_javelin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
reqwest = { version = "0.11", features = ["json"] }
dirs = "4.0"
shellexpand = "2.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
